# flashcat

./: .dictate.toml  .gitignore  Cargo.toml  README.md
db/: spi_nor.ron
docs/: status_registers.md
firmware/: PRO5_1V8.bit  PRO5_3V.bit
src/: bios.rs  chip.rs  cmd.rs  db.rs  fpga.rs  main.rs  programmer.rs  progress.rs  spi.rs  units.rs  usb.rs
src/bios/: amd_psp.rs  efifv.rs  ifd.rs  layout.rs
src/cmd/: check.rs  compare.rs  detect.rs  erase.rs  fmap.rs  lock.rs  protect.rs  read.rs  regions.rs  sfdp.rs  status.rs  uid.rs  watch.rs  write.rs
src/spi/: bus.rs  detect.rs  erase.rs  lock.rs  probe.rs  protect.rs  quad.rs  read.rs  sfdp.rs  write.rs
src/usb/: device.rs  requests.rs
